Fixed flickering issues on safari

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -18,7 +18,9 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  will-change: transform;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  will-change: transform, transition;
 }
 .react-multiple-carousel__arrow {
   position: absolute;
@@ -96,7 +98,10 @@
 .react-multi-carousel-dot--active button {
   background: #080808;
 }
-
+.react-multi-carousel-item {
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+}
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .react-multi-carousel-item {
     flex-shrink: 0 !important;
